--- a/views/about.ejs
+++ b/views/about.ejs
@@ -151,7 +151,7 @@
                 <p class="role">Front-end Developer</p>
               </div>
               <br />
-              <div class="picture-holder">
+              <!-- <div class="picture-holder">
                 <img src="img/aquino.jpg" alt="Zarina's" /> <br />
                 <br />
                 <h4 class="collaborator">Yvan Lowell T. Aquino</h4>
@@ -159,7 +159,7 @@
                 <hr />
                 <br />
                 <p class="role">Full-stack Developer</p>
-              </div>
+              </div> -->
 
               <div class="picture-holder" id="leader">
                 <img src="img/dungo.jpeg" alt="Zarina B. Dungo" id="leader-img" /> <br />
