--- a/public/admin/css/candidates.css
+++ b/public/admin/css/candidates.css
@@ -19,7 +19,11 @@
 
 .container,
 .form-container {
-  border: 3px solid rgb(0, 0, 0, 0.5);
+  border: 0.2rem solid rgba(14, 13, 13, 0.5);
+}
+
+hr {
+  border: 0.1rem solid rgba(14, 13, 13, 0.5);
 }
 
 .container img {
@@ -30,8 +34,9 @@
 
 .button {
   font-weight: bold;
+  font-size: 0.9em;
   color: white;
-  padding: 1em 3em;
+  padding: 1em 2em;
   border-radius: 5em;
   border: none;
 }
@@ -46,11 +51,27 @@
     right: 0;
   } */
 
-.button-edit {
-  background-color: var(--background-brown);
+.container-position {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.button-add,
+.position {
+  /* float: left; */
+}
+
+.button-edit {
+  background-color: #0024e4;
+}
+
+.button-add {
+  background-color: var(--background-brown);
+  /* width: 100%; */
+  /* text-align: right; */
+  /* float: right; */
+}
+
 .button-save {
   background-color: var(--background-green);
 }
@@ -105,3 +126,51 @@ form img {
   width: 5em;
   height: auto;
 }
+
+.container-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.candidate {
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 2rem;
+}
+
+.candidate .candidate-content {
+  display: flex;
+  align-items: center;
+  gap: 2em;
+}
+
+.candidate .img-container {
+  border-radius: 50%;
+  background-color: white; /* Set the background to white */
+  display: inline-block; /* Ensure it only takes up as much space as needed */
+  display: flex; /* Align the content */
+  justify-content: center; /* Center the content horizontally */
+  align-items: center; /* Center the content vertically */
+  overflow: hidden;
+}
+
+.candidate img {
+  height: 6rem;
+  width: 6rem;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.candidate .button-edit {
+  align-self: flex-end;
+}
+
+.container-position {
+  padding-bottom: 2rem;
+}
+/* 
+.position-ssc {
+  color: ;
+} */
