--- a/public/css/index.css
+++ b/public/css/index.css
@@ -291,7 +291,7 @@ a {
   width: 80%;
   justify-content: center;
   align-items: center;
-  margin-top: 1.57%;
+  margin-top: 1rem;
   /* border: 1px solid black; */
 }
 
@@ -313,7 +313,8 @@ a {
   display: flex;
   flex-direction: column;
   width: 90vw;
-  padding: 0 6%;
+  padding: 0 5rem;
+
   /* border: 3px solid black; */
 
   /* margin-top: 4%; */
