--- a/views/admin/configuration.ejs
+++ b/views/admin/configuration.ejs
@@ -285,7 +285,7 @@
               <button type="submit" style="background-color: #4caf50; color: #fff">Set Results Are Out</button>
             </form>
             <% } %>
-            <form action="/api/reset-election" method="POST">
+            <form action="/reset-election" method="POST">
               <button type="submit" style="background-color: #000; color: #fff">Reset Election</button>
             </form>
           </div>
