--- a/public/admin/css/candidates.css
+++ b/public/admin/css/candidates.css
@@ -174,3 +174,51 @@ form img {
 .position-ssc {
   color: ;
 } */
+
+.blockchain {
+  /* border: 3px solid black; */
+  width: 100%;
+  text-align: center;
+}
+
+.action-button {
+  padding: 0.6rem;
+  margin: 1rem;
+  border-radius: 1rem;
+  border: none;
+  color: white;
+  font-weight: bold;
+}
+
+#submitBtn {
+  background-color: #503a96;
+}
+
+#resetCandidatesBtn {
+  background-color: #c11515;
+}
+
+.title-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding-right: 3rem;
+  /* border: 3px solid black; */
+}
+
+.ssc {
+  color: #a60212;
+}
+.lsc {
+  color: #0b8000;
+}
+
+.purple {
+  color: #402e7b;
+}
+
+.smart-contract-status {
+  font-weight: normal;
+}
