--- a/public/voter/css/register.css
+++ b/public/voter/css/register.css
@@ -26,6 +26,10 @@
   padding-left: 12rem;
 }
 
+.content h1 {
+  font-size: 2.125rem;
+}
+
 .main-second {
   display: flex;
   flex-direction: column;
