--- a/views/homepages/index-registration-period.ejs
+++ b/views/homepages/index-registration-period.ejs
@@ -10,6 +10,9 @@
     <!-- <link rel="stylesheet" type="text/css" href="css/index_election.css" /> -->
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+
+    <link rel="stylesheet" href="components/notification.css" />
+    <script type="module" src="components/notification.js"></script>
   </head>
   <body>
     <header class="header">
@@ -97,6 +100,17 @@
       </div>
     </footer>
     <script src="js/index.js"></script>
+
+    <script type="module">
+      import { createNotification } from "/components/notification.js";
+      const urlParams = new URLSearchParams(window.location.search);
+      if (urlParams.get("registered") === "true") {
+        createNotification("You are already registered.", "info", 3000);
+        // Remove the query parameter so it doesn't display again on refresh.
+        history.replaceState({}, document.title, window.location.pathname);
+      }
+    </script>
+
     <script>
       // Use registration dates from server configuration.
       const registrationStart = new Date("<%= electionConfig.registrationStart %>").getTime();
