--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -8,12 +8,17 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/admin-login.css" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+
+    <link rel="stylesheet" href="components/notification.css" />
+    <script type="module" src="components/notification.js"></script>
   </head>
   <body>
     <header class="header">
       <div class="header-logo">
-        <img src="img/logo_tanikala.png" alt="Tanikala Voting System" />
+        <img src="img/logo_tanikala.png" alt="TANIKALA Voting System" />
       </div>
       <nav class="header-nav">
         <ul class="header-nav-content">
@@ -29,17 +34,8 @@
       <div class="content-title">
         <h3>ONLINE VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
       </div>
-
       <div class="content-main">
         <br />
-        <!-- <button class="admin-back">
-          <svg height="16" width="16" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1024 1024">
-            <path
-              d="M874.690416 495.52477c0 11.2973-9.168824 20.466124-20.466124 20.466124l-604.773963 0 188.083679 188.083679c7.992021 7.992021 7.992021 20.947078 0 28.939099-4.001127 3.990894-9.240455 5.996574-14.46955 5.996574-5.239328 0-10.478655-1.995447-14.479783-5.996574l-223.00912-223.00912c-3.837398-3.837398-5.996574-9.046027-5.996574-14.46955 0-5.433756 2.159176-10.632151 5.996574-14.46955l223.019353-223.029586c7.992021-7.992021 20.957311-7.992021 28.949332 0 7.992021 8.002254 7.992021 20.957311 0 28.949332l-188.073446 188.073446 604.753497 0C865.521592 475.058646 874.690416 484.217237 874.690416 495.52477z"
-            ></path>
-          </svg>
-          <span>Back</span>
-        </button> -->
         <div class="card">
           <h1 class="title">Admin Login</h1>
           <form action="/admin-login" method="POST">
@@ -49,7 +45,8 @@
                   d="M207.8 20.73c-93.45 18.32-168.7 93.66-187 187.1c-27.64 140.9 68.65 266.2 199.1 285.1c19.01 2.888 36.17-12.26 36.17-31.49l.0001-.6631c0-15.74-11.44-28.88-26.84-31.24c-84.35-12.98-149.2-86.13-149.2-174.2c0-102.9 88.61-185.5 193.4-175.4c91.54 8.869 158.6 91.25 158.6 183.2l0 16.16c0 22.09-17.94 40.05-40 40.05s-40.01-17.96-40.01-40.05v-120.1c0-8.847-7.161-16.02-16.01-16.02l-31.98 .0036c-7.299 0-13.2 4.992-15.12 11.68c-24.85-12.15-54.24-16.38-86.06-5.106c-38.75 13.73-68.12 48.91-73.72 89.64c-9.483 69.01 43.81 128 110.9 128c26.44 0 50.43-9.544 69.59-24.88c24 31.3 65.23 48.69 109.4 37.49C465.2 369.3 496 324.1 495.1 277.2V256.3C495.1 107.1 361.2-9.332 207.8 20.73zM239.1 304.3c-26.47 0-48-21.56-48-48.05s21.53-48.05 48-48.05s48 21.56 48 48.05S266.5 304.3 239.1 304.3z"
                 ></path>
               </svg>
-              <input autocomplete="off" id="logemail" placeholder="Email" class="input-field" name="email" type="email" required />
+              <!-- Changed field to use username -->
+              <input autocomplete="off" id="logusername" placeholder="Username" class="input-field" name="username" type="text" required />
             </div>
             <div class="field">
               <svg class="input-icon" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
@@ -61,8 +58,6 @@
             <a href="#" class="btn-link">Forgot your password?</a>
           </form>
         </div>
-        <!-- <a>Go back to previous page.</a> -->
-
         <br />
         <br />
         <div class="logo-beside">
@@ -77,7 +72,6 @@
         <img src="img/calendar.png" class="footer-img" />
         <p id="datetime">OCTOBER 23, 2024 - 04:17 AM</p>
       </div>
-
       <div class="footer-center">
         <img src="img/copyright.png" class="footer-img" id="copyright-img" />
         <p>2025 - Fourmula 1</p>
@@ -89,5 +83,25 @@
       </div>
     </footer>
     <script src="js/index.js"></script>
+
+    <script type="module">
+      import { createNotification } from "/components/notification.js";
+
+      const urlParams = new URLSearchParams(window.location.search);
+
+      if (urlParams.has("error")) {
+        let errorMessage = "An unknown error occurred. Please try again.";
+        const errorType = urlParams.get("error");
+
+        if (errorType === "invalid_credentials") {
+          errorMessage = "Invalid username or password. Please try again.";
+        } else if (errorType === "server_error") {
+          errorMessage = "A server error occurred. Please try again later.";
+        }
+
+        createNotification(errorMessage, "error", 3000);
+        history.replaceState({}, document.title, window.location.pathname);
+      }
+    </script>
   </body>
 </html>
