--- a/views/admin/system-manage-admins.ejs
+++ b/views/admin/system-manage-admins.ejs
@@ -239,7 +239,23 @@
                 <th>Actions</th>
               </tr>
             </thead>
-            <tbody></tbody>
+            <tbody>
+              <% admins.forEach(function(admin) { %>
+              <tr data-username="<%= admin.username %>">
+                <td>
+                  <img src="<%= admin.img %>" alt="Admin Image" style="width: 50px; height: 50px" />
+                </td>
+                <td><%= admin.name %></td>
+                <td><%= admin.role %></td>
+                <td><%= admin.username %></td>
+                <td><%= admin.password %></td>
+                <td>
+                  <button class="edit-btn" data-username="<%= admin.username %>">Edit</button>
+                  <button class="delete-btn" data-username="<%= admin.username %>">Delete</button>
+                </td>
+              </tr>
+              <% }); %>
+            </tbody>
           </table>
         </div>
       </main>
