--- a/public/voter/css/index_voter.css
+++ b/public/voter/css/index_voter.css
@@ -1,3 +1,27 @@
+/* Style the scrollbar itself */
+::-webkit-scrollbar {
+  width: 8px; /* Adjust the width for a slimmer scrollbar */
+  height: 8px; /* Adjust height for horizontal scrollbar */
+  border: 1px solid #3f0807;
+}
+
+/* Style the scrollbar track (background of the scrollbar) */
+::-webkit-scrollbar-track {
+  background: #3f0807; /* Black track */
+}
+
+/* Style the scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background: var(--sidebar-color); /* Slightly lighter black for the thumb */
+  border-radius: 10px; /* Optional: rounded corners */
+  border: 1.2px solid #3f0807;
+}
+
+/* Style the scrollbar thumb when hovered */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--sidebar-color-lighter);
+}
+
 :root {
   --color-yellow: #f5ab29;
   --color-white: #f0f1e1;
@@ -17,6 +41,9 @@
   --width-header-logo: 25vw;
   --width-header-nav: calc(100vw - var(--width-header-logo));
   --width-header-nav-content: 50%;
+
+  --sidebar-color-lighter: #d29c45;
+  --sidebar-color: #e1ae5b;
 }
 
 * {
